--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         setupAndInit();
 
-
+        
 
         // coinFlip = getRandomInt(3, 0);
         // console.log(coinFlip);
@@ -111,6 +111,10 @@
 
        
 
+    }
+
+    function resetScoreRanking(){
+        //localStorage.setItem('score',0);
     }
 
     function restartGameloop(){
@@ -211,6 +215,7 @@
 
     function setupAndInit() {
 
+        resetScoreRanking();
         console.log('loadding...');
         control = KEYBOARD;
         dificult = MEDIUM;
